# fantasy_football

./: .gitignore  FantasyTeam.lp  README.md  api_call.py  data_ingestion.py  insert_dataframes.py  pipeline.sh  pyproject.toml  run.py  wordpress_test.ipynb  zzzzzzz.ipynb
best_squad/: best_squad.py
ingestion/: data_ingestion.py  run_ingestion_pipeline.sh
sql/: create_elements_table.sql
